# BankingSystem

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md  run.sh
cli/: CMakeLists.txt  cli_manager.cpp  cli_manager.h  cli_state.cpp  cli_state.h
common/: CMakeLists.txt  common.h  printable.h  singleton.h
core_model/: CMakeLists.txt  account.cpp  account.h  user.cpp  user.h
database/: CMakeLists.txt  database_interface.cpp  database_interface.h
lib/: CMakeLists.txt
